--- a/server/package.json
+++ b/server/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "group3-chat-app",
+  "name": "react-chat-app",
   "version": "1.0.0",
-  "description": "chat-realtime-app",
-  "main": "./server/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "react blog",
+  "main": "index.js",
+  "engine": {
+    "node": "10.16.0",
+    "npm": "6.9.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/quanghatran/PTPMPT-Group3-chatApp.git"
+  "scripts": {
+    "start": "node server/index.js",
+    "backend": "nodemon server/index.js",
+    "frontend": "npm run front --prefix client",
+    "dev": "concurrently \"npm run backend\" \"npm run start --prefix client\""
   },
   "author": "Group3",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/quanghatran/PTPMPT-Group3-chatApp/issues"
-  },
-  "homepage": "https://github.com/quanghatran/PTPMPT-Group3-chatApp#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.6",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.12",
-    "multer": "^1.4.3",
-    "socket.io": "^4.4.0"
+    "mongoose": "^5.4.20",
+    "multer": "^1.4.2",
+    "react-dropzone": "^10.1.10",
+    "react-redux": "^5.0.7",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.14"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.19.1"
   }
 }
