fix docker + fix url

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,9 +31,10 @@ services:
   mongo:
     image: mongo
     ports:
-      - "27017:27017"
+      - "27018:27017"
     networks:
       - mern-app
+    stdin_open: true
     volumes:
       - ./data:/data/db
   
