--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "react-dropzone": "^10.1.10",
     "react-icons": "^3.7.0",
     "react-redux": "^7.1.0-rc.1",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.2.6",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
